# evtx2json

./: LICENSE  README.md  requirements.txt  setup.cfg  setup.py
src/evtx2json/: evtx2json.py
src/evtx2json.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
