[metadata]
name = evtx2json
version = 1.0.0
url = https://github.com/jonitampan/extx2json
author = Sida Nala
author_email = rudukmada@gmail.com
license_file = LICENSE
description = Import Windows EventLogs(.evtx files) to JSON File.
long_description = file: README.md

[options]
zip_safe = False
package_dir =
    = src
packages = find:
install_requires = 
    evtx
    tqdm
entry_points = file: entry_points.cfg

[options.packages.find]
where=src
